fix: add --add-opens JVM flags to allow evomaster agent instrumentation on Java 9+
Agent-Logs-Url: https://github.com/IverSyversen/Self-healing-API---Semester-Project-/sessions/d75fdaaa-fc2d-4178-825c-fb06111fb94f

Co-authored-by: CrustyClappyBlabby <126561061+CrustyClappyBlabby@users.noreply.github.com>